k8s/monitoring/prometheus-longterm.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-longterm
  namespace: monitoring
  labels:
    app: kube-prometheus-stack
spec:
  selector:
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/instance: prometheus-longterm   # operator labels LT pods with this
  ports:
    - name: http-web
      port: 9090
      targetPort: 9090
