k8s/monitoring/alertmanager-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager-route
  namespace: monitoring
  annotations:
    external-dns.alpha.kubernetes.io/hostname: alertmanager.oliverilp.ee
spec:
  parentRefs:
    - name: traefik-internal-gateway
      namespace: traefik
  hostnames:
    - alertmanager.oliverilp.ee
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: prometheus-alertmanager
          port: 9093
