k8s/monitoring/prometheus-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus-route
  namespace: monitoring
  annotations:
    external-dns.alpha.kubernetes.io/hostname: prometheus.oliverilp.ee
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-internal-gateway
      namespace: traefik
  hostnames:
    - prometheus.oliverilp.ee
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: prometheus-prometheus
          port: 9090
          weight: 1
